CVSB-12007 Changing back button text based on previous page

--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -11,7 +11,7 @@
         </ng-template>
       </ng-container>
     </ion-title>
-    <ion-buttons end *ngIf="testData && !fromTestCreatePage">
+    <ion-buttons end *ngIf="testData">
       <button ion-button
               (click)="goToPreparerPage()"
               [ngClass]="{buttonOpacity: changeOpacity}">
