--- a/src/pages/testing/vehicle/vehicle-adr-details/vehicle-adr-details.html
+++ b/src/pages/testing/vehicle/vehicle-adr-details/vehicle-adr-details.html
@@ -17,7 +17,7 @@
   <ion-list class="vehicle-list">
     <ion-list-header padding-left padding-right text-uppercase>ADR details</ion-list-header>
 
-    <ion-item margin-left *ngIf="vehicleData.techRecord.adrDetails.vehicleDetails.type">
+    <ion-item margin-left *ngIf="vehicleData.techRecord.adrDetails.vehicleDetails?.type">
       <ion-label>
         <h3>Vehicle type</h3>
       </ion-label>
@@ -31,13 +31,13 @@
         <h3>Date processed</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.vehicleDetails.approvalDate | date: 'dd MMM yyyy'}}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.vehicleDetails?.approvalDate | date: 'dd MMM yyyy'}}</p>
       </div>
     </ion-item>
 
     <ion-item margin-left
               class="multiple-values-field"
-              *ngIf="vehicleData.techRecord.adrDetails.additionalNotes.guidanceNotes && vehicleData.techRecord.adrDetails.additionalNotes.guidanceNotes.length">
+              *ngIf="vehicleData.techRecord.adrDetails.additionalNotes?.guidanceNotes && vehicleData.techRecord.adrDetails.additionalNotes?.guidanceNotes?.length">
       <ion-label>
         <h3>Guidance notes</h3>
       </ion-label>
@@ -80,7 +80,7 @@
   </ion-list>
 
   <ion-list class="vehicle-list"
-            *ngIf="vehicleData.techRecord.adrDetails.tank && vehicleData.techRecord.adrDetails.tank.tankDetails">
+            *ngIf="vehicleData.techRecord.adrDetails.tank && vehicleData.techRecord.adrDetails.tank?.tankDetails">
     <ion-list-header padding-left padding-right text-uppercase>Tank details</ion-list-header>
 
     <ion-item margin-left *ngIf="vehicleData.techRecord.adrDetails.tank.tankDetails.tankManufacturer">
@@ -139,7 +139,7 @@
   </ion-list>
 
   <ion-list class="vehicle-list"
-            *ngIf="vehicleData.techRecord.adrDetails.tank && vehicleData.techRecord.adrDetails.tank.tankStatement">
+            *ngIf="vehicleData.techRecord.adrDetails.tank && vehicleData.techRecord.adrDetails.tank?.tankStatement">
     <ion-list-header padding-left
                      padding-right
                      text-uppercase>Substances permitted
@@ -149,7 +149,7 @@
               *ngIf="vehicleData.techRecord.adrDetails.tank.tankStatement.substancesPermitted === ADR_DETAILS.SUBSTANCES_PERMITTED || vehicleData.techRecord.adrDetails.tank.tankStatement.substancesPermitted === ADR_DETAILS.SUBSTANCES_CLASS_UN">
       <ion-label text-wrap>
         <h3>{{vehicleData.techRecord.adrDetails.tank.tankStatement.substancesPermitted === ADR_DETAILS.SUBSTANCES_PERMITTED ?
-            ADR_DETAILS.SUBSTANCES_PERMITTED : ADR_DETAILS.SUBSTANCES_CLASS_UN}}</h3>
+          ADR_DETAILS.SUBSTANCES_PERMITTED : ADR_DETAILS.SUBSTANCES_CLASS_UN}}</h3>
       </ion-label>
     </ion-item>
 
@@ -229,14 +229,14 @@
   </ion-list>
 
   <ion-list class="vehicle-list"
-            *ngFor="let subsequentInspection of vehicleData.techRecord.adrDetails.tank.tankDetails.tc3Details">
+            *ngFor="let subsequentInspection of vehicleData.techRecord.adrDetails.tank?.tankDetails?.tc3Details">
     <ion-list-header padding-left
                      padding-right
                      text-uppercase>Subsequent tank inspection
     </ion-list-header>
 
     <ion-item margin-left
-              *ngIf="subsequentInspection.tc3Type">
+              *ngIf="subsequentInspection?.tc3Type">
       <ion-label>
         <h3>Inspection type</h3>
       </ion-label>
@@ -246,7 +246,7 @@
     </ion-item>
 
     <ion-item margin-left
-              *ngIf="subsequentInspection.tc3PeriodicNumber">
+              *ngIf="subsequentInspection?.tc3PeriodicNumber">
       <ion-label>
         <h3>Certificate number</h3>
       </ion-label>
@@ -256,7 +256,7 @@
     </ion-item>
 
     <ion-item margin-left
-              *ngIf="subsequentInspection.tc3PeriodicExpiryDate">
+              *ngIf="subsequentInspection?.tc3PeriodicExpiryDate">
       <ion-label>
         <h3>Expiry Date</h3>
       </ion-label>
@@ -283,7 +283,7 @@
   </ion-list>
 
   <ion-list class="vehicle-list"
-            *ngIf="vehicleData.techRecord.adrDetails.vehicleDetails.type.toLowerCase() === ADR_VEHICLE_TYPE.RIGID_BATTERY_TANK || vehicleData.techRecord.adrDetails.vehicleDetails.type.toLowerCase() === ADR_VEHICLE_TYPE.SEMI_TRAILER_BATTERY">
+            *ngIf="vehicleData.techRecord.adrDetails.vehicleDetails?.type?.toLowerCase() === ADR_VEHICLE_TYPE.RIGID_BATTERY_TANK || vehicleData.techRecord.adrDetails.vehicleDetails?.type?.toLowerCase() === ADR_VEHICLE_TYPE.SEMI_TRAILER_BATTERY">
     <ion-list-header padding-left
                      padding-right>Battery list
     </ion-list-header>
@@ -317,7 +317,7 @@
         <h3>Required</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{this.commonFunc.checkForMatchInArray(GUIDANCE_NOTES.NEW_CERTIFICATE_REQUESTED, vehicleData.techRecord.adrDetails.additionalNotes.guidanceNotes) ? 'Yes' : 'No'}}</p>
+        <p>{{this.commonFunc.checkForMatchInArray(GUIDANCE_NOTES.NEW_CERTIFICATE_REQUESTED, vehicleData.techRecord.adrDetails.additionalNotes?.guidanceNotes) ? 'Yes' : 'No'}}</p>
       </div>
     </ion-item>
   </ion-list>
@@ -346,7 +346,7 @@
         <h3>Name</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails.name || DEFAULT_VALUES.NOT_ENTERED }}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails?.name || DEFAULT_VALUES.NOT_ENTERED }}</p>
       </div>
     </ion-item>
 
@@ -355,7 +355,7 @@
         <h3>Street</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails.street || DEFAULT_VALUES.NOT_ENTERED }}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails?.street || DEFAULT_VALUES.NOT_ENTERED }}</p>
       </div>
     </ion-item>
 
@@ -364,7 +364,7 @@
         <h3>Town</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails.town || DEFAULT_VALUES.NOT_ENTERED }}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails?.town || DEFAULT_VALUES.NOT_ENTERED }}</p>
       </div>
     </ion-item>
 
@@ -373,7 +373,7 @@
         <h3>City</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails.city || DEFAULT_VALUES.NOT_ENTERED }}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails?.city || DEFAULT_VALUES.NOT_ENTERED }}</p>
       </div>
     </ion-item>
 
@@ -382,7 +382,7 @@
         <h3>Postcode</h3>
       </ion-label>
       <div item-content padding-right>
-        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails.postcode || DEFAULT_VALUES.NOT_ENTERED }}</p>
+        <p>{{ vehicleData.techRecord.adrDetails.applicantDetails?.postcode || DEFAULT_VALUES.NOT_ENTERED }}</p>
       </div>
     </ion-item>
   </ion-list>
