--- a/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
+++ b/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
@@ -10,17 +10,17 @@
     </ion-toolbar>
 
 </ion-header>
-  
+
 <ion-content no-padding>
-    <div text-uppercase 
-         text-center 
+    <div text-uppercase
+         text-center
          class="vehicle-header-vrm-number">
         <ng-container *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else isVehicle">{{ vehicleData.trailerId }}</ng-container>
         <ng-template #isVehicle>{{ vehicleData.vrm | formatVrm }}</ng-template>
     </div>
-  
+
     <ion-list class="vehicle-list" *ngFor="let axle of vehicleData.techRecord.axles">
-        <ion-list-header padding-left padding-right>AXLE {{ axle.axleNumber }}</ion-list-header>
+        <ion-list-header padding-left padding-right>AXLE {{ axle?.axleNumber }}</ion-list-header>
         <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
             <ion-label>
                 <h3>Kerb</h3>
@@ -148,7 +148,7 @@
             </div>
         </ion-item>
     </ion-list>
-            
+
     <ion-list margin-bottom class="vehicle-list" *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
         <ion-list-header padding-left padding-right>UNLADEN</ion-list-header>
         <ion-item margin-left padding-right>
@@ -162,4 +162,4 @@
     </ion-list>
 
 </ion-content>
-  
+
