--- a/src/pages/testing/vehicle/vehicle-adr-details/vehicle-adr-details.html
+++ b/src/pages/testing/vehicle/vehicle-adr-details/vehicle-adr-details.html
@@ -7,9 +7,9 @@
 <ion-content no-padding>
   <div text-uppercase text-center class="vehicle-header-vrm-number">
     <ng-container
-      *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else isVehicle"
-      >{{ vehicleData.trailerId }}</ng-container
-    >
+      *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, VEHICLE_TYPE.TRL); else isVehicle"
+      >{{ vehicleData.trailerId }}
+    </ng-container>
     <ng-template #isVehicle>{{ vehicleData.vrm | formatVrm }}</ng-template>
   </div>
 
@@ -37,18 +37,20 @@
       </div>
     </ion-item>
 
-    <ion-item
-      margin-left
-      class="multiple-values-field"
-      *ngIf="vehicleData.techRecord.adrDetails.additionalNotes?.guidanceNotes && vehicleData.techRecord.adrDetails.additionalNotes?.guidanceNotes?.length"
-    >
+    <ion-item margin-left class="multiple-values-field">
       <ion-label>
         <h3>Guidance notes</h3>
       </ion-label>
-      <div item-content padding-right>
-        <p *ngFor="let note of vehicleData.techRecord.adrDetails.additionalNotes.guidanceNotes">
-          {{ note }}
-        </p>
+      <div
+        item-content
+        padding-right
+        *ngIf="this.adrData.additionalNotes && adrData.additionalNotes.number[0] "
+      >
+        <div *ngFor="let number of adrData.additionalNotes.number; let i = index">
+          <p>
+            <span>{{ number }}</span>
+          </p>
+        </div>
       </div>
     </ion-item>
 
