fix(feature/cvsb-18389): trigger reference data api calls when the app start button is clicked fix(feature/cvsb-18388: Changing the activity check sequencing

--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
@@ -9,7 +9,7 @@
       {{title}}
     </ion-title>
     <ion-buttons end>
-      <button ion-button class="custom-search-button" (click)="searchVehicle(searchVal)">
+      <button ion-button class="custom-search-button" (click)="checkOpenVisit(searchVal)">
         Search
       </button>
     </ion-buttons>
