fix(feature/cvsb-18678): activity API call failing when ending a visit already closed

--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -143,6 +143,7 @@
       >
         End visit
       </button>
+      <div hidden>{{confirmVisit$ | async}}</div>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
