feat(5836) initial commit

--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -14,7 +14,7 @@
       </ng-container>
     </ion-title>
     <ion-buttons end *ngIf="testData">
-      <button ion-button (click)="goToPreparerPage()" [ngClass]="{buttonOpacity: changeOpacity}">
+      <button ion-button (click)="goToTestCreatePage()" [ngClass]="{buttonOpacity: changeOpacity}">
         Confirm
       </button>
     </ion-buttons>
