--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -14,8 +14,8 @@
       </ng-container>
     </ion-title>
     <ion-buttons end *ngIf="testData">
-      <button ion-button (click)="goToTestCreatePage()" [ngClass]="{buttonOpacity: changeOpacity}">
-        Confirm
+      <button ion-button (click)="confirmAndStartTest()" [ngClass]="{buttonOpacity: changeOpacity}">
+        Confirm & Start
       </button>
     </ion-buttons>
   </ion-navbar>
