feat(feature/vta-366): improved handling of responses when ending a visit

--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons end>
-      <button ion-button (click)="createNewTestReport()" *ngIf="isCreateTestEnabled">
+      <button ion-button (click)="createNewTestReport()" [disabled]="!isCreateTestEnabled">
         Start test
       </button>
     </ion-buttons>
