--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script>
+    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='ba85c573c847cf600d5e';})(this);
+    </script>
+    <!-- sentry-cordova -->
     <meta charset="UTF-8" />
     <title>Ionic App</title>
     <meta
