--- a/src/pages/testing/test-creation/country-of-registration/country-of-registration.html
+++ b/src/pages/testing/test-creation/country-of-registration/country-of-registration.html
@@ -1,4 +1,4 @@
-<ion-header transforming-searchBar [searchBarElemRef]="searchBar">
+<ion-header>
   <ion-navbar>
     <ion-title margin-left>
       Country of registration
@@ -12,9 +12,6 @@
   <ion-toolbar>
     <ion-searchbar
       (ionInput)="searchList($event)"
-      (ionFocus)="keepCancelOn($event)"
-      (ionCancel)="keepCancelOn($event, true)"
-      [ngClass]="{'keep-cancel-on': focusOut}"
       [(ngModel)]="searchVal"
       [showCancelButton]="true"
       [cancelButtonText]="'Cancel'"
