feature/VTA-606 fixed error display

--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="error-banner" *ngIf="errorIncomplete && !allVehiclesCompletelyTested">
+  <div class="error-banner" [hidden]='!errorIncomplete && allVehiclesCompletelyTested' >
     {{TEST_CREATE_ERROR_BANNER}}
   </div>
   <ion-list
